2009-01-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_smpp.c: fixed #460.

2009-01-09 Alexander Malysh <amalysh at kannel.org>
    * gw/wap_push_ppg.c: applied patch from #473.

2009-01-09 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: Fixed length calculation for concatenated 7Bit
      MO messages.
      Thanks to Matti Ärmänen <matti.armanen at sci.fi> for bug report.
      [Msg-ID: <496720A1.5010705@sci.fi>]

2009-01-08 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_at.c: applied patch that fixes 7bit encoding.
      Thanks to Riku Palomäki <riku at hyperkuutio.fi> for this patch.
      [Msg-ID: <20080711031340.25df040e@karvalakki.kyla.fi>]

2009-01-06 Alexander Malysh <amalysh at kannel.org>
    * gw/smsc/smsc_http.c: applied patch which will allow to send concat,
      8bit and unicode messages over HTTP via Clickatell.
      Thanks to Donald Jackson <donaldjster at gmail.com> for this patch.
      [Msg-ID: <290be5f30901042256r416032ecu1a909f23ee46baa7@mail.gmail.com>]

2008-12-10 Alexander Malysh <amalysh at kannel.org>
(CB)* doc/userguide/userguide.xml, gw/bb_alog.c, gw/dlr.[ch], gw/msg-decl.h, gw/urltrans.c:
      applied patch that adds foreign (SMSC) ID to message. This patch breaks access log
      format and extends Msg struct.
      Thanks to Alejandro Guerrieri <aguerrieri at kannel.org> for this patch.

2008-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/wap_push_ppg.c, gw/wapbox.c: fixed memory leaks.

2008-12-10 Alexander Malysh <amalysh at kannel.org>
    * gw/bb_alog.c: fixed memory leak. Thanks to Nikos Balkanas for test case.

2008-11-25 Alexander Malysh <amalysh at kannel.org>
    * gw/smsbox.c: escape string values in the XML document for MO messages.
      Thanks to Michael Zervakis <michael at zervakis.com> for pointing to this issue.

2008-11-19 Alexander Malysh <amalysh at kannel.org>
    * gwlib/log.c: fixed double close/free in log_close_all().